# portable-antivirus

./: .gitattributes  .gitignore  AGENTS.md  HLD.md  IMPLEMENTATION_PLAN.md  LLD.md  README.md  SRS.md  bind_sd.ps1  mount_sd.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  sd_check.sh  ssh_test.sh
config/: config.json.example  dev.config.json
deploy/: README.md  install-dev.sh  portable-av.env.example
deploy/systemd/: portable-av-engine.service  portable-av-mount@.service
deploy/udev/: 99-portable-av.rules
portable_av/: __init__.py
portable_av/api/: __init__.py  app.py  auth.py  dependencies.py  error_handlers.py  routes_config.py  routes_drive.py  routes_history.py  routes_internal.py  routes_scan.py  routes_status.py  schemas.py  websocket.py
portable_av/common/: __init__.py  config.py  config_loader.py  domain.py  errors.py  logging.py  models.py  paths.py  time.py
portable_av/display/: __init__.py  buttons.py  display_manager.py  lcd_hat_driver.py  screens.py  ws_client.py
portable_av/engine/: __init__.py  clamav_adapter.py  cli.py  event_bus.py  file_enumerator.py  hashing.py  interfaces.py  progress.py  scan_controller.py  scan_models.py  yara_adapter.py
portable_av/history/: __init__.py  db.py  models.py  repository.py
portable_av/mount/: __init__.py  device_detector.py  filesystem_info.py  mount_manager.py  notify_engine.py
portable_av/reports/: __init__.py  report_writer.py
portable_av/update/: __init__.py  (+2 more)
tools/: benchmark_clamav.sh  display_simulator.py  run_eicar_test.sh  setup_clamd.sh  write_eicar_fixture.py
(+9 files in other folders)
